fix: modify button on mobile view

--- a/assets/css/custom-css/index.css
+++ b/assets/css/custom-css/index.css
@@ -67,7 +67,7 @@ body {
 }
 
 .get-started-btn {
-  width: 265px;
+  /* width: 265px; */
   padding: 1.1em;
   background: #eaf9ff;
   border-radius: 8px;
@@ -310,8 +310,8 @@ body {
   }
 
   .get-started-btn {
-    width: 265px;
-    padding: 10px;
+    /* width: 265px; */
+    padding: 10px 13px;
     background: #eaf9ff;
     border-radius: 8px;
     color: #007dc1;
